[package]
name = "stream"
version = "0.1.0"
authors = ["Sergey Duck <sergeypechnikov326@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scrap = {git="https://github.com/quadrupleslap/scrap/"}
crossbeam = "*"
brotli = "*"
tokio = { version = "*", features = ["full"] }
image = "*"
simplelog = {git="https://github.com/drakulix/simplelog.rs"}
log = "*"

[profile.release]
lto = true
